JDK 9 warnings fixed